--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "lucide-react": "^0.456.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-typical": "^0.1.3",
     "swiper": "^11.1.14"
+  },
+  "devDependencies": {
+    "prisma": "^5.22.0"
   }
 }
