--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.3",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
