--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "aos": "^2.3.4",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.6",
+    "fastify": "^5.1.0",
     "flowbite": "^2.5.2",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -19,7 +24,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
