--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-select": "^5.8.3",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.15",
     "zod": "^3.23.8"
   },
