--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.6",
     "fastify": "^5.1.0",
