--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
