--- a/api/package.json
+++ b/api/package.json
@@ -14,9 +14,10 @@
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
