--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "fastify": "^5.1.0",
+    "fastify-cors": "^6.0.3",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.1"
   },
