--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,8 @@
     "fastify": "^5.1.0",
     "flowbite": "^2.5.2",
     "framer-motion": "^11.12.0",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
