--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.6",
     "fastify": "^5.1.0",
     "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
